--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@babel/core": "^7.26.7",
     "@babel/preset-env": "^7.26.7",
     "@eslint/js": "^9.17.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.2.0",
     "@types/jest": "^29.5.14",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
